Zoom bubble shouldn't automatically focus reset button

Partial revert of crrev/c/1189044.

Bug: 894006
Change-Id: I2c2fea22a417f6ae1b97289a4f261263333d5864
Reviewed-on: https://chromium-review.googlesource.com/c/1284055
Commit-Queue: James Wallace-Lee <jamwalla@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600107}
Former-commit-id: 89e89b315681b00be37cc3ac6afc00dfed660ff7