chrome/browser/ui/views/location_bar/zoom_bubble_view.h
@@ -94,7 +94,6 @@ class ZoomBubbleView : public LocationBarBubbleDelegateView,
   ~ZoomBubbleView() override;
 
   // LocationBarBubbleDelegateView:
-  View* GetInitiallyFocusedView() override;
   base::string16 GetAccessibleWindowTitle() const override;
   int GetDialogButtons() const override;
   void OnFocus() override;
